# manter

./: .gitmodules  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOR-MACOS.md  LICENCE.txt  README.md  SETUP.md  index.html  package-lock.json  package.json  whichman.sh
.github/: FUNDING.yml
public/: global-style.css
src/: App.svelte  banner.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pty_settings.json
src-tauri/src/config/: .manter.sh  config.rs
src-tauri/src/pty/: child.rs  lib.rs  lib_unix.rs  lib_windows.rs  mod.rs  server.rs  ws_server.rs
src-tauri/src/pty_linux/: child.rs  lib.rs  mod.rs  server.rs
src-tauri/src/pty_unix/: lib.rs  mod.rs  server.rs
src-tauri/src/pty_windows/: mod.rs  pty.rs  server.rs
src-tauri/src/settings/: settings.rs
src/lib/: Shell.svelte  command.ts
src/lib/components/: BottomBar.svelte  Home.svelte  Search.svelte  Shell.svelte  Suggestion.svelte  SuggestionsBox.svelte  SuggestionsContainer.svelte  SuggestionsWrapper.svelte  Tabs.svelte  Terminal.svelte
src/lib/config/: config.ts
src/lib/stores/: stores.ts
src/lib/suggestions/: GetByScript.ts  GetDynamicValues.ts
src/lib/utils/: utils.ts
src/suggestions/: GetByScript.ts  suggestions.ts
