[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
anyhow = "1.0"
bytes = "0.6.0"
futures = "0.3"
futures-util = "0.3.8"
libc = "0.2"
log = "0.4"
nix = "=0.17.0"
env_logger = "0.7"
pretty-hex = "0.2.1"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13.0"
tungstenite = "0.12.0"
mt_logger = "3.0.2"
thiserror = "1"
strip-ansi-escapes = "0.1"

[dev-dependencies]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
