[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
bytes = "1.1.0"
futures = "0.3"
futures-util = "0.3.8"
env_logger = "0.9.0"
serde_derive = "1.0"
mt_logger = "3.0.2"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
portable-pty = "0.7.0"
dirs = "4.0.0"
whoami = "1.2.1"
anyhow = "1.0.58"

[dev-dependencies]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
